# goit-pythonweb-hw-10

./: .examplenv  pyproject.toml
migrations/: env.py
migrations/versions/: 2f546f91baac_init.py  5f6aaaeb9b25_initial_migration.py  a0fee5b9fe39_initial_migration.py  c77a0122a44a_add_user_contact_relations.py  d7eb38218d26_add_user.py
src/app/: __init__.py  main.py
src/app/config/: config.py
src/app/controllers/: contacts.py  user.py  users.py
src/app/database/: db.py  models.py
src/app/response/: schemas.py
src/app/routes/: auth.py  contacts.py  user.py  users.py
src/app/services/: auth.py  contacts.py  current_user.py  email.py  upload_file.py  user.py  users.py
